# eleuteria-scribe-flow

./: .env  .gitignore  .prettierignore  .prettierrc  Makefile  README.md  electron-builder.json5  eleuteria_data_models.drawio  eslint.config.js  i18next.config.ts  index.html  install-backend.js  package-lock.json  package.json  requirements.txt  start.js  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
.husky/: pre-commit
backend/: .coveragerc  .pre-commit-config.yaml  eleuteria-backend.spec  pyproject.toml  requirements.txt
backend/app/: main.py  run.py
backend/app/data/db/: db.py
backend/app/data/entities/: project_entities.py
backend/app/data/helpers/: json_list_encoder_helper.py
backend/app/data/respositories/: project_repository.py
backend/app/domain/: manuscript_manager.py  plot_utils.py  project_utils.py
backend/app/router/: character_router.py  manuscript_router.py  project_router.py  world_router.py
backend/app/router/sections/: character_router.py  manuscript_router.py  plot_router.py  world_router.py
backend/app/schemas/: character_schemas.py  manuscript_schemas.py  project_schemas.py  words_stats_schemas.py  world_schemas.py
backend/app/statics/: load_static.py  project_templates.json
backend/scripts/: backend-builder  backend-builder.sh  dependencies-installer  dependencies-installer.ps1  dependencies-installer.sh
backend/tests/: test_project_router.py
backend/tests/domain/: test_manuscript_manager.py  test_plot_utils.py  test_project_utils.py
backend/tests/router/: test_project_router.py
(+225 files in other folders)
