[project]
name = "eleuteria_backend"
version = "0.1.0"
description = "Eleuteria Writing Studio Backend"
authors = [
    {name = "Gabriel Rodriguez"},
    {name = "Yaidi Garcia"}
]
license = {text = "MIT"}
# readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "aiosqlite (==0.21.0)",
    "annotated-types (==0.7.0)",
    "anyio (==4.9.0)",
    "certifi (==2025.6.15)",
    "click (==8.2.1)",
    "fastapi (==0.115.13)",
    "greenlet (==3.2.3)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "iniconfig (==2.1.0)",
    "mypy-extensions (==1.1.0)",
    "packaging (==25.0)",
    "pathspec (==0.12.1)",
    "platformdirs (==4.3.8)",
    "pluggy (==1.6.0)",
    "pydantic (==2.11.7)",
    "pydantic-core (==2.33.2)",
    "pygments (==2.19.2)",
    "pytest-asyncio (==1.0.0)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.41)",
    "starlette (==0.46.2)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.14.0)",
    "uvicorn (==0.34.3)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
coverage = "^7.9.2"
black = "^25.1.0"
pyinstaller = "^6.14.2"

